Source/FrontEnd/Parser.cpp
//==============================================================================
// Copyright (C) John-Philip Taylor
// jpt13653903@gmail.com
//
// This file is part of ALCHA
//
// This file is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>
//==============================================================================

#include "Parser.h"
//------------------------------------------------------------------------------

using namespace std;
//------------------------------------------------------------------------------

PARSER::PARSER(){
  error = false;
}
//------------------------------------------------------------------------------

PARSER::~PARSER(){
}
//------------------------------------------------------------------------------

void PARSER::Error(const char* Message){
  error = true;
  ::Error(Token.Line, Scanner.Filename, Message);
  if(Token.Type != TOKEN::TYPE::Unknown) printf(
    ANSI_FG_CYAN "  Token: "
    ANSI_RESET "%s\n", Token.Data.c_str()
  );
}
//------------------------------------------------------------------------------

void PARSER::GetToken(){
  if(error) return;

  if(!Scanner.GetToken(&Token)) return;

  #ifdef DEBUG
    Debug.print(ANSI_FG_BRIGHT_BLACK);
    Debug.print(Scanner.Filename.c_str());
    Debug.print(":" ANSI_FG_CYAN "");
    Debug.print("%05d", Token.Line);
    Debug.print("  \t" ANSI_RESET);
    switch(Token.Type){
      case TOKEN::TYPE::Identifier: Debug.print("Identifier\t"                 ); break;
      case TOKEN::TYPE::Literal   : Debug.print("Literal   \t"                 ); break;
      case TOKEN::TYPE::String    : Debug.print("String    \t\""               ); break;
      default                     : Debug.print("Token %d  \t", (int)Token.Type); break;
    }
    Debug.print(Token.Data.c_str());
    switch(Token.Type){
      case TOKEN::TYPE::Literal: Debug.print(" = %s", Token.Value.Display()); break;
      case TOKEN::TYPE::String : Debug.print("\""); break;
      default                  : break;
    }
    Debug.print("\n");
  #endif
}
//------------------------------------------------------------------------------

AST::ASSIGNMENT* PARSER::AttributeAssignment(){
  AST::ASSIGNMENT* Node;

  if(Token.Type != TOKEN::TYPE::Identifier){
    Error("Attribute expected");
    return 0;
  }
  Node = new AST::ASSIGNMENT(
    Token.Line, Scanner.Filename.c_str(), AST::ASSIGNMENT::ASSIGNMENT_TYPE::Assign
  );
  Node->Left = Identifier();
  if(!Node->Left){
    Error("Identifier expected");
    delete Node;
    return 0;
  }

  if(Token.Type != TOKEN::TYPE::Assign){
    Error("'=' expected");
    delete Node;
    return 0;
  }
  GetToken();

  Node->Right = Primary();
  if(!Node->Right){
    Error("Attribute value expected");
    delete Node;
    return 0;
  }

  return Node;
}
//------------------------------------------------------------------------------

AST::ASSIGNMENT* PARSER::AttributeList(){
  AST::ASSIGNMENT* Head = 0;
  AST::ASSIGNMENT* Tail = 0;
  AST::ASSIGNMENT* Node;

  if(Token.Type != TOKEN::TYPE::OpenAngle) return 0;
  GetToken();

  while(Token.Type != TOKEN::TYPE::Unknown){
    Node = AttributeAssignment();
    if(!Node){
      Error("Attribute assignment expected");
      if(Head) delete Head;
      return 0;
    }
    if(Tail) Tail->Next = Node;
    else     Head       = Node;
    Tail = Node;

    if(Token.Type == TOKEN::TYPE::CloseAngle){
      GetToken();
      return Head;
    }
    if(Token.Type != TOKEN::TYPE::Comma){
      Error("',' or '>' expected");
      delete Head;
      return 0;
    }
    GetToken();
  }
  Error("Incomplete attribute list");
  if(Head) delete Head;
  return 0;
}
//------------------------------------------------------------------------------

AST::CLASS_DEFINITION* PARSER::ClassDefinition(){
  if(Token.Type != TOKEN::TYPE::Class) return 0;
  AST::CLASS_DEFINITION* Node = new AST::CLASS_DEFINITION(
    Token.Line, Scanner.Filename.c_str()
  );
  GetToken();

  Node->Attributes = AttributeList();

  if(Token.Type != TOKEN::TYPE::Identifier){
    Error("Identifier expected");
    delete Node;
    return 0;
  }
  Node->Identifier = Token.Data;
  GetToken();

  if(Token.Type == TOKEN::TYPE::OpenRound){
    GetToken();

    Node->Parameters = DefParameterList();

    if(Token.Type != TOKEN::TYPE::CloseRound){
      Error(") expected");
      delete Node;
      return 0;
    }
    GetToken();
  }

  if(Token.Type == TOKEN::TYPE::Colon){
    AST::CLASS_DEFINITION::PARENT* Parent;
    AST::CLASS_DEFINITION::PARENT* LastParent = 0;
    do{
      GetToken();

      Parent = new AST::CLASS_DEFINITION::PARENT;
      if(LastParent) LastParent->Next = Parent;
      else           Node->Parents    = Parent;
      LastParent = Parent;

      Parent->ClassName = TypeIdentifier();
      if(!Parent->ClassName){
        Error("Type identifier expected");
        delete Node;
        return 0;
      }

      Parent->Parameters = ParameterList();
    }while(Token.Type == TOKEN::TYPE::Comma);
  }
  if(Token.Type != TOKEN::TYPE::OpenCurly){
    Error("{ expected");
    delete Node;
    return 0;
  }
  GetToken();

  Node->Body = Statements();

  if(Token.Type != TOKEN::TYPE::CloseCurly){
    Error("} expected");
    delete Node;
    return 0;
  }
  GetToken();

  return Node;
}
//------------------------------------------------------------------------------

AST::ENUM_DEFINITION* PARSER::EnumDefinition(){
  if(Token.Type != TOKEN::TYPE::Enum) return 0;
  AST::ENUM_DEFINITION* Node = new AST::ENUM_DEFINITION(
    Token.Line, Scanner.Filename.c_str()
  );
  GetToken();

  if(Token.Type != TOKEN::TYPE::Identifier){
    Error("Identifier expected");
    delete Node;
    return 0;
  }
  Node->Identifier = Token.Data;
  GetToken();

  if(Token.Type != TOKEN::TYPE::OpenCurly){
    Error("{ expected");
    delete Node;
    return 0;
  }

  AST::ENUM_DEFINITION::VALUE* Value;
  AST::ENUM_DEFINITION::VALUE* LastValue = 0;

  do{
    GetToken();

    Value = new AST::ENUM_DEFINITION::VALUE;
    if(LastValue) LastValue->Next = Value;
    else          Node->Values    = Value;
    LastValue = Value;

    if(Token.Type != TOKEN::TYPE::Identifier){
      Error("Identifier expected");
      delete Node;
      return 0;
    }
    Value->Identifier = Token.Data;
    GetToken();
  }while(Token.Type == TOKEN::TYPE::Comma);

  if(Token.Type != TOKEN::TYPE::CloseCurly){
    Error("} expected");
    delete Node;
    return 0;
  }
  GetToken();

  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::String(){
  if(Token.Type != TOKEN::TYPE::String) return 0;

  AST::EXPRESSION* Node = new AST::EXPRESSION(
    Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::String
  );

  Node->StrValue = Token.Data;

  GetToken();
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Literal(){
  switch(Token.Type){
    case TOKEN::TYPE::True   : Token.Value = 1; break;
    case TOKEN::TYPE::False  : Token.Value = 0; break;
    case TOKEN::TYPE::Literal:                  break;
    default            : return 0;
  }

  AST::EXPRESSION* Node = new AST::EXPRESSION(
    Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Literal
  );

  Node->Value = Token.Value;

  GetToken();
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Identifier(){
  if(Token.Type != TOKEN::TYPE::Identifier) return 0;

  AST::EXPRESSION* Node = new AST::EXPRESSION(
    Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Identifier
  );
  Node->Name = Token.Data;

  GetToken();
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::ExpressionList(){
  AST::EXPRESSION* Head;
  AST::EXPRESSION* Node;

  Head = Node = Expression();
  if(!Node) return 0;

  while(Token.Type == TOKEN::TYPE::Comma){
    GetToken();
    Node->Next = Expression();
    Node       = (AST::EXPRESSION*)Node->Next;
    if(!Node){
      Error("Expression expected");
      delete Head;
      return 0;
    }
  }
  return Head;
}
//------------------------------------------------------------------------------

AST::BASE* PARSER::Parameter(){
  AST::ASSIGNMENT* Node;
  AST::EXPRESSION* Expr = Expression();
  if(!Expr) return 0;

  if(Expr->Type == AST::BASE::TYPE::Identifier){
    switch(Token.Type){
      case TOKEN::TYPE::Assign:
        Node = new AST::ASSIGNMENT(
          Token.Line, Scanner.Filename.c_str(), AST::ASSIGNMENT::ASSIGNMENT_TYPE::Assign
        );
        break;

      case TOKEN::TYPE::Raw_Assign:
        Node = new AST::ASSIGNMENT(
          Token.Line, Scanner.Filename.c_str(), AST::ASSIGNMENT::ASSIGNMENT_TYPE::Raw_Assign
        );
        break;

      default:
        return Expr;
    }
    GetToken();

    Node->Left  = Expr;
    Node->Right = Expression();

    if(!Node->Right){
      Error("Expression expected");
      delete Node;
      return 0;
    }
    return Node;
  }
  return Expr;
}
//------------------------------------------------------------------------------

AST::BASE* PARSER::ParameterList(){
  AST::BASE* Head = 0;
  AST::BASE* Tail = 0;
  AST::BASE* Node;

  if(Token.Type != TOKEN::TYPE::OpenRound) return 0;
  GetToken();
  if(Token.Type == TOKEN::TYPE::CloseRound){
    GetToken();
    return 0; // The caller checks for OpenRound if required
  }

  while(Token.Type != TOKEN::TYPE::Unknown){
    Node = Parameter();
    if(!Node){
      Error("Parameter assignment or expression expected");
      if(Head) delete Head;
      return 0;
    }
    if(Tail) Tail->Next = Node;
    else     Head       = Node;
    Tail = Node;

    if(Token.Type == TOKEN::TYPE::CloseRound){
      GetToken();
      return Head;
    }
    if(Token.Type != TOKEN::TYPE::Comma){
      Error("',' or ')' expected");
      delete Head;
      return 0;
    }
    GetToken();
  }
  Error("Incomplete parameter list");
  if(Head) delete Head;
  return 0;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Array(){
  AST::EXPRESSION* Node;

  if(Token.Type == TOKEN::TYPE::OpenSquare){
    GetToken();

    Node = new AST::EXPRESSION(
      Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Array
    );
    Node->Right = ExpressionList();

    if(Token.Type != TOKEN::TYPE::CloseSquare){
      Error("] expected");
      delete Node;
      return 0;
    }
    GetToken();
    return Node;
  }
  return 0;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::ArrayConcat(){
  AST::EXPRESSION* Node;

  if(Token.Type == TOKEN::TYPE::ArrayConcatenate){
    GetToken();

    Node = new AST::EXPRESSION(
      Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::ArrayConcatenate
    );
    Node->Right = ExpressionList();

    if(Token.Type != TOKEN::TYPE::CloseSquare){
      Error("] expected");
      delete Node;
      return 0;
    }
    GetToken();
    return Node;
  }
  return 0;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::VectorConcat(){
  AST::EXPRESSION* Node;

  if(Token.Type == TOKEN::TYPE::Concatenate){
    GetToken();

    Node = new AST::EXPRESSION(
      Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::VectorConcatenate
    );
    Node->Right = ExpressionList();

    if(Token.Type != TOKEN::TYPE::CloseRound){
      Error(") expected");
      delete Node;
      return 0;
    }
    GetToken();
    return Node;
  }
  return 0;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Primary(){
  AST::EXPRESSION* Node;
  bool GlobalAttribute = false;

  if(Token.Type == TOKEN::TYPE::AccessAttribute){
    GlobalAttribute = true;
    GetToken();
  }

  Node = Identifier();
  if(Node){
    if(GlobalAttribute){
      AST::EXPRESSION* Temp = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::AccessAttribute
      );
      Temp->Right = Node;
      Node = Temp;
    }
    return Node;
  }
  if(GlobalAttribute){
    Error("Identifier expected");
    return 0;
  }

  Node = Literal     (); if(Node) return Node;
  Node = Array       (); if(Node) return Node;
  Node = String      (); if(Node) return Node;
  Node = VectorConcat(); if(Node) return Node;
  Node = ArrayConcat (); if(Node) return Node;

  if(Token.Type == TOKEN::TYPE::OpenRound){
    GetToken();

    Node = Expression();
    if(!Node){
      Error("Expression expected");
      return 0;
    }

    if(Token.Type != TOKEN::TYPE::CloseRound){
      Error(") expected");
      delete Node;
      return 0;
    }
    GetToken();
    return Node;
  }
  return 0;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::CastEpr(AST::EXPRESSION* Node){
  AST::EXPRESSION* Temp;

  if(Token.Type == TOKEN::TYPE::CastOp){
    Temp = new AST::EXPRESSION(
      Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Cast
    );
    GetToken();
    Temp->Left = Node;
    Node = Temp;

    Node->Right = Identifier(); if(Node->Right) return Node;
    Node->Right = Literal   (); if(Node->Right) return Node;

    if(Token.Type != TOKEN::TYPE::OpenRound){
      Error("Cast expression specifier expected");
      delete Node;
      return 0;
    }
    GetToken();

    Node->Right = Expression();
    if(!Node->Right){
      Error("Expression expected");
      delete Node;
      return 0;
    }
    if(Token.Type == TOKEN::TYPE::Comma){
      GetToken();
      Node->Right->Next = Expression();
      if(!Node->Right->Next){
        Error("Expression expected");
        delete Node;
        return 0;
      }
    }
    if(Token.Type != TOKEN::TYPE::CloseRound){
      Error(") expected");
      delete Node;
      return 0;
    }
    GetToken();
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Cast(){
  AST::EXPRESSION* Node;
  Node = Primary();
  if(!Node) return 0;

  return CastEpr(Node);
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Postfix(){
  AST::EXPRESSION* Node = Cast();
  if(!Node) return 0;

  AST::EXPRESSION* Temp;

  while(Token.Type != TOKEN::TYPE::Unknown){
    if(Token.Type == TOKEN::TYPE::OpenSquare){ // Array slice
      Temp = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Slice
      );

      Temp->Left  = Node;
      Temp->Right = Array();
      Node = Temp;

      if(!Node->Right){
        Error("Slice array expected");
        delete Node;
        return 0;
      }

    }else if(Token.Type == TOKEN::TYPE::OpenRound){ // Function call
      Temp = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::FunctionCall
      );

      Temp->Left  = Node;
      Temp->Right = ParameterList();
      Node = Temp;

    }else if(Token.Type == TOKEN::TYPE::AccessMember){
      Temp = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::AccessMember
      );
      GetToken();

      Temp->Left  = Node;
      Temp->Right = Identifier();
      Node = Temp;

      if(!Node->Right){
        Error("Identifier expected");
        delete Node;
        return 0;
      }

    }else if(Token.Type == TOKEN::TYPE::AccessMemberSafe){
      Temp = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::AccessMemberSafe
      );
      GetToken();

      Temp->Left  = Node;
      Temp->Right = Identifier();
      Node = Temp;

      if(!Node->Right){
        Error("Identifier expected");
        delete Node;
        return 0;
      }

    }else if(Token.Type == TOKEN::TYPE::AccessAttribute){
      Temp = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::AccessAttribute
      );
      GetToken();

      Temp->Left  = Node;
      Temp->Right = Identifier();
      Node = Temp;

      if(!Node->Right){
        Error("Identifier expected");
        delete Node;
        return 0;
      }

    }else if(Token.Type == TOKEN::TYPE::Increment){
      Temp = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Increment
      );
      GetToken();

      Temp->Left = Node;
      Node = Temp;

    }else if(Token.Type == TOKEN::TYPE::Decrement){
      Temp = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Decrement
      );
      GetToken();

      Temp->Left = Node;
      Node = Temp;

    }else if(Token.Type == TOKEN::TYPE::Factorial){
      Temp = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Factorial
      );
      GetToken();

      Temp->Left = Node;
      Node = Temp;

    }else{
      return Node;
    }
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Unary(){
  AST::EXPRESSION* Node;
  AST::EXPRESSION* Head = 0;
  AST::EXPRESSION* Tail = 0;

  while(Token.Type != TOKEN::TYPE::Unknown){
    if(Token.Type == TOKEN::TYPE::Negate){
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Negate
      );

    }else if(Token.Type == TOKEN::TYPE::Bit_NOT){
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Bit_NOT
      );

    }else if(Token.Type == TOKEN::TYPE::Colon){
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Raw
      );

    }else if(Token.Type == TOKEN::TYPE::Increment){
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Increment
      );

    }else if(Token.Type == TOKEN::TYPE::Decrement){
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Decrement
      );

    }else{
      break;
    }
    GetToken();
    if(Tail) Tail->Right = Node;
    else     Head        = Node;
    Tail = Node;
  }
  Node = Postfix();
  if(Tail) Tail->Right = Node;
  else     Head        = Node;
  Tail = Node;

  if(!Node){
    if(Head){
      Error("Postfix expected");
      delete Head;
    }
    return 0;
  }
  return Head;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Range(){
  AST::EXPRESSION* Node;
  AST::EXPRESSION* Temp;

  Node = Unary();
  if(!Node) return 0;

  if(Token.Type == TOKEN::TYPE::To){
    Temp = new AST::EXPRESSION(
      Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Range
    );
    GetToken();

    Temp->Left  = Node;
    Temp->Right = Unary();
    Node = Temp;
    if(!Node->Right){
      Error("Range end expected");
      delete Node;
      return 0;
    }
    if(Token.Type == TOKEN::TYPE::Step){
      GetToken();
      Node->Right->Next = Unary();
      if(!Node->Right->Next){
        Error("Range step expected");
        delete Node;
        return 0;
      }
    }
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Reduction(){
  AST::EXPRESSION* Node = 0;
  switch(Token.Type){
    case TOKEN::TYPE::Bit_AND:
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::AND_Reduce
      );
      GetToken();
      break;

    case TOKEN::TYPE::Bit_NAND:
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::NAND_Reduce
      );
      GetToken();
      break;

    case TOKEN::TYPE::Bit_OR:
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::OR_Reduce
      );
      GetToken();
      break;

    case TOKEN::TYPE::Bit_NOR:
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::NOR_Reduce
      );
      GetToken();
      break;

    case TOKEN::TYPE::Bit_XOR:
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::XOR_Reduce
      );
      GetToken();
      break;

    case TOKEN::TYPE::Bit_XNOR:
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::XNOR_Reduce
      );
      GetToken();
      break;

    case TOKEN::TYPE::Logical_NOT:
      Node = new AST::EXPRESSION(
        Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Logical_NOT
      );
      GetToken();
      break;

    default:
      break;
  }
  if(Node){
    Node->Right = Range();
    if(!Node->Right){
      Error("Range expected");
      delete Node;
      return 0;
    }
  }else{
    Node = Range();
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Stringification(){
  // TODO
  return Reduction();
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Replication(){
  AST::EXPRESSION* Temp;
  AST::EXPRESSION* Node;

  Node = Stringification();
  if(!Node) return 0;

  if(Token.Type == TOKEN::TYPE::Replicate){
    Temp = new AST::EXPRESSION(
      Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Replicate
    );
    GetToken();

    Temp->Left = Node;
    Node = Temp;

    Node->Right = Primary();
    if(!Node->Right){
      Error("Primary expected");
      delete Node;
      return 0;
    }
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Exponential(){
  AST::EXPRESSION* Temp;
  AST::EXPRESSION* Node;

  Node = Replication();
  if(!Node) return 0;

  while(Token.Type != TOKEN::TYPE::Unknown){
    switch(Token.Type){
      case TOKEN::TYPE::Exponential:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Exponential
        );
        break;
      default:
        return Node;
    }
    GetToken();

    Temp->Left = Node;
    Node = Temp;

    Node->Right = Replication();
    if(!Node->Right){
      Error("Replication expected");
      delete Node;
      return 0;
    }
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Multiplicative(){
  AST::EXPRESSION* Temp;
  AST::EXPRESSION* Node;

  Node = Exponential();
  if(!Node) return 0;

  while(Token.Type != TOKEN::TYPE::Unknown){
    switch(Token.Type){
      case TOKEN::TYPE::Multiply:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Multiply
        );
        break;
      case TOKEN::TYPE::Divide:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Divide
        );
        break;
      case TOKEN::TYPE::Modulus:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Modulus
        );
        break;
      default:
        return Node;
    }
    GetToken();

    Temp->Left = Node;
    Node = Temp;

    Node->Right = Exponential();
    if(!Node->Right){
      Error("Exponential expected");
      delete Node;
      return 0;
    }
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Additive(){
  AST::EXPRESSION* Temp;
  AST::EXPRESSION* Node;

  Node = Multiplicative();
  if(!Node) return 0;

  while(Token.Type != TOKEN::TYPE::Unknown){
    switch(Token.Type){
      case TOKEN::TYPE::Add:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Add
        );
        break;
      case TOKEN::TYPE::Subtract:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Subtract
        );
        break;
      default:
        return Node;
    }
    GetToken();

    Temp->Left = Node;
    Node = Temp;

    Node->Right = Multiplicative();
    if(!Node->Right){
      Error("Multiplicative expected");
      delete Node;
      return 0;
    }
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Shift(){
  AST::EXPRESSION* Temp;
  AST::EXPRESSION* Node;

  Node = Additive();
  if(!Node) return 0;

  while(Token.Type != TOKEN::TYPE::Unknown){
    switch(Token.Type){
      case TOKEN::TYPE::Shift_Left:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Shift_Left
        );
        break;
      case TOKEN::TYPE::Shift_Right:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Shift_Right
        );
        break;
      default:
        return Node;
    }
    GetToken();

    Temp->Left = Node;
    Node = Temp;

    Node->Right = Additive();
    if(!Node->Right){
      Error("Additive expected");
      delete Node;
      return 0;
    }
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Relational(){
  AST::EXPRESSION* Temp;
  AST::EXPRESSION* Node;

  Node = Shift();
  if(!Node) return 0;

  while(Token.Type != TOKEN::TYPE::Unknown){
    switch(Token.Type){
      case TOKEN::TYPE::Less:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Less
        );
        break;
      case TOKEN::TYPE::Greater:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Greater
        );
        break;
      case TOKEN::TYPE::Less_Equal:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Less_Equal
        );
        break;
      case TOKEN::TYPE::Greater_Equal:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Greater_Equal
        );
        break;
      default:
        return Node;
    }
    GetToken();

    Temp->Left = Node;
    Node = Temp;

    Node->Right = Shift();
    if(!Node->Right){
      Error("Shift expected");
      delete Node;
      return 0;
    }
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::Equality(){
  AST::EXPRESSION* Temp;
  AST::EXPRESSION* Node;

  Node = Relational();
  if(!Node) return 0;

  while(Token.Type != TOKEN::TYPE::Unknown){
    switch(Token.Type){
      case TOKEN::TYPE::Equal:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Equal
        );
        break;
      case TOKEN::TYPE::Not_Equal:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Not_Equal
        );
        break;
      default:
        return Node;
    }
    GetToken();

    Temp->Left = Node;
    Node = Temp;

    Node->Right = Relational();
    if(!Node->Right){
      Error("Relational expected");
      delete Node;
      return 0;
    }
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::BitwiseAND(){
  AST::EXPRESSION* Temp;
  AST::EXPRESSION* Node;

  Node = Equality();
  if(!Node) return 0;

  while(Token.Type != TOKEN::TYPE::Unknown){
    switch(Token.Type){
      case TOKEN::TYPE::Bit_AND:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Bit_AND
        );
        break;
      case TOKEN::TYPE::Bit_NAND:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Bit_NAND
        );
        break;
      default:
        return Node;
    }
    GetToken();

    Temp->Left = Node;
    Node = Temp;

    Node->Right = Equality();
    if(!Node->Right){
      Error("Equality expected");
      delete Node;
      return 0;
    }
  }
  return Node;
}
//------------------------------------------------------------------------------

AST::EXPRESSION* PARSER::BitwiseXOR(){
  AST::EXPRESSION* Temp;
  AST::EXPRESSION* Node;

  Node = BitwiseAND();
  if(!Node) return 0;

  while(Token.Type != TOKEN::TYPE::Unknown){
    switch(Token.Type){
      case TOKEN::TYPE::Bit_XOR:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Bit_XOR
        );
        break;
      case TOKEN::TYPE::Bit_XNOR:
        Temp = new AST::EXPRESSION(
          Token.Line, Scanner.Filename.c_str(), AST::BASE::TYPE::Bit_XNOR
        );
        break;
      default:
        return Node;
    }
    GetToken();

    Temp->Left = Node;
    Node = Temp;

    Node->Right = BitwiseAND();
    if(!Node->Right){
      Error("BitwiseAND expected");
      delete Node;
      return 0;
    }
  }
  return Node;
}
//------------------------------------------------------------------------------
